<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">boxplorer</string>
    <string name="db_name">boxplorer.db</string>
    
    <!-- menu -->
    <string name="input_methods">Input methods</string>
	<string name="search_voice">Voice</string>
	<string name="search_qr_code">QR code</string>
	<string name="search_nfc">NFC Tag</string>
    
	<string name="title">Title</string>
	<string name="box_remove_question">Do you want to remove box?</string>
	<string name="box_remove">remove box</string>
	<string name="item_remove_question">Do you want to remove item?</string>
	<string name="item_remove">remove item</string>
	<string name="item_name_empty">Insert item name</string>
	<string name="box_name_empty">Insert box name</string>
    <string name="box_add">add box</string>
    <string name="box_edit">edit box</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="item_location">Localization</string>
    <string name="item_name">Item name</string>
    <string name="edit_item">edit item</string>
    <string name="add_item">add item</string>
    <string name="remove_item">Remove item</string>
    <string name="box_name">Box name</string>
    <string name="box_location">Box location</string>
    <string name="itme_location">Item location</string>
    <string name="generate_qr_code">QR code</string>
    <string name="write_nfc_tag">NFC tag</string>
    <string name="send_qr_code">Send QR code</string>
    <string name="application_logo">Application logo</string>
    <string name="nfc_logo">NFC logo</string>
    <string name="box_expand_indicator">Box expand indicator</string>
    <string name="box_not_found">Box not found</string>
    <string name="searcher_clear">Clear</string>
    
    <!-- qrcode: start -->
    <string name="button_ok">OK</string>
    <string name="qr_image">Image</string>
    <string name="msg_camera_framework_bug">We are sorry, but Android camera seems to not working right. There might be  Może wystąpić potrzeba ponownego uruchomienia urządzenia.</string>
    <string name="msg_default_status">To scan please place QR Code in rectangle</string>
    <string name="result_text">Text found</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_meta">Meta</string>
    <string name="contents_text">Content</string>
    <string name="qr_description">Print and put your QR code at easliy accesible place at the box.</string>
    <string name="qr_generation_failed">Unable to generate QR Code</string>

    <!-- nfc: end -->
    <string name="tap_nfc_searching">NFC searching</string>
    <string name="tap_nfc_search_info">Put your phone to box with NFC tag.</string>
    <string name="tap_nfc_write">Please tap NFC Tag to proceed</string>
    <string name="nfc_tag_refused_to_format">Tag refused to format</string>
    <string name="nfc_tag_refused_to_connect">Tag refused to connect</string>
    <string name="nfc_tag_does_not_support_ndef">Tag does not support NDEF format</string>
    <string name="nfc_tag_is_read_only">Tag is read-only</string>
    <string name="nfc_message_is_too_big">Message is too big for tag</string>
    <string name="nfc_general_exception">General error</string>
	<string name="nfc_description">In order to save your box information on NFC tag put the phone closer.</string>
    <string name="nfc_tag_saved">Tag has been saved</string>
    <string name="nfc_unable_to_read">Unable to read NFC tag properly</string>

    <!-- import export -->
    <string name="export">Export</string>
    <string name="import_db">Import</string>
    <string name="import_title">Import</string>
    <string name="import_question">Do you want to import boxes? Current boxes will be removed.</string>
    <string name="import_successful">Boxes imported successfully</string>
    <string name="import_fail">Cannot import boxes. File does not exist or is invalid.</string>
</resources>