<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:title="@string/input_methods"
        android:icon="@drawable/search_methods"
          android:showAsAction="always">
     	<menu>
		   	<item android:id="@+id/voice"
		          android:title="@string/search_voice"
				  android:showAsAction="ifRoom"
		          android:icon="@drawable/voice"
		          />
		     <item android:id="@+id/qr_code"
		          android:title="@string/search_qr_code"
				  android:showAsAction="ifRoom"
		          android:icon="@drawable/qr"
		          />
		      <item android:id="@+id/nfc"
		          android:title="@string/search_nfc"
		          android:showAsAction="ifRoom"
		          android:icon="@drawable/nfc"
		         />
	      </menu>
	 </item>

    <item
        android:id="@+id/mainMenu"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always">
        <menu>

             <item android:id="@+id/export"
                        android:title="@string/export"
                        android:icon="@drawable/db_export"
                        />
             <item android:id="@+id/importDB"
                        android:title="@string/import_db"
                        android:icon="@drawable/db_import"
                        />
      </menu>
    </item>
</menu>
