<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/expand_bg"
        android:layout_width="25dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/box_rectangle" >

        <ImageView
            android:id="@+id/expand_indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/expand_off"
            android:contentDescription="@string/box_expand_indicator" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expand_height"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_bottom_padding"
                android:text="@string/box_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/font_dark_color"
                android:textSize="@dimen/box_name_height" />

            <TextView
                android:id="@+id/group_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:text="@string/box_location"
                android:textAllCaps="true"
                android:textColor="@color/box_localization"
                android:textSize="@dimen/box_location_height" />
        </LinearLayout>

        <ImageView
            android:id="@+id/group_edit_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:src="@drawable/edit"
            android:contentDescription="@string/edit_item" />

        <ImageView
            android:id="@+id/group_remove_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/actions_margin"
            android:layout_weight="0.25"
            android:src="@drawable/remove"
            android:contentDescription="@string/remove_item" />

        <ImageView
            android:id="@+id/group_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/actions_margin"
            android:layout_weight="0.25"
            android:scaleType="center"
            android:src="@drawable/add"
            android:contentDescription="@string/add_item" />

    </LinearLayout>

</LinearLayout>
