<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/item_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="-50dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/item_toolbar_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:src="@drawable/edit"
            android:contentDescription="@string/edit_item" />

        <ImageView
            android:id="@+id/item_toolbar_remove"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:scaleType="fitCenter"
            android:src="@drawable/remove"
            android:contentDescription="@string/remove_item" />

    </LinearLayout>

</LinearLayout>