<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/nfc_logo"
            android:src="@drawable/nfc_example" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/box_nfc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/search_nfc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/header"
                android:textSize="@dimen/wizard_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/box_nfc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/nfc_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/header" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>